--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,3 @@
-/* button {
-  border-radius: 25%;
-  background-color: #716040;
-} */
 .label-wrapper {
   display: flex;
   justify-content: center;
@@ -23,16 +19,20 @@ input {
   background-color: gainsboro;
 }
 
+nput[type="checkbox" i] {
+  background-color: green;
+}
+
 .task {
   display: flex;
   text-decoration: none;
-  /* background-color: #fffcf2; */
   width: 40%;
   height: 90%;
-  margin: 20px 10px 10%;
-  /* flex-direction: row; */
-  /* justify-content: center;
-} */
+  margin: 1%;
+  font-family: "Lobster", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 1rem;
 }
 
 ul {
@@ -42,18 +42,16 @@ ul {
 .button-container {
   display: flex;
   justify-content: flex-start;
-  margin: 0 12%;
+  margin: 10px 10%;
 }
 
 button {
-  /* margin: 0 auto; */
-  align-self: center;
   background-color: #fff;
   background-image: none;
   background-position: 0 90%;
   background-repeat: repeat no-repeat;
   background-size: 4px 3px;
-  border-radius: 15px 225px 255px 15px 15px 255px 225px 15px;
+  border-radius: 20px;
   border-style: solid;
   border-width: 2px;
   box-shadow: rgba(0, 0, 0, 0.2) 15px 28px 25px -18px;
@@ -63,7 +61,7 @@ button {
   display: inline-block;
   font-family: Neucha, sans-serif;
   font-size: 1rem;
-  line-height: 23px;
+  line-height: 1px;
   outline: none;
   padding: 0.75rem;
   text-decoration: none;
