--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ input {
   background-color: gainsboro;
 }
 
-nput[type="checkbox" i] {
+input[type="checkbox" i] {
   background-color: green;
 }
 
