--- a/styles.css
+++ b/styles.css
@@ -1,102 +1,97 @@
 * {
-  font-family: "Lobster", sans-serif;
+  font-family: "Cabin", sans-serif;
   font-weight: 400;
   font-style: normal;
+}
+
+.label-wrapper {
+  font-size: 2rem;
+  color: white;
+  display: flex;
+  justify-content: center;
+}
+
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-.label-wrapper {
-  display: flex;
-  justify-content: center;
-  font-size: 2rem;
-}
-
 body {
-  background-color: blanchedalmond;
-}
-
-/* input {
-  display: inline-block;
-  width: 40%;
-  margin: 5% 0px auto 14%;
-  background-color: gainsboro;
-} */
-
-/* input[type="checkbox"] {
-  display: flex;
-  align-items: center;
-} */
-
-.task {
-  width: 40%;
-  height: 90%;
-  margin: 1%;
-}
-
-ul {
-  list-style-type: none;
+  /* background: url(./images/JustWood.jpg);
+  background-size: cover; */
+  background-color: #004643;
 }
 
 .main {
-  background: url(./images/todo.jpg);
-  background-size: cover;
-  background-size: initial;
   display: flex;
   justify-content: center;
+  align-items: center;
   flex-direction: column;
-  box-sizing: border-box;
-  width: 60%;
-  margin: 0px auto;
-  min-width: 500px;
+  margin-top: 20px;
+}
+
+#userInput {
+  padding: 10px;
+  border: 1px solid #ced4da;
+  border-radius: 5px;
+  margin-right: 10px;
+  width: 300px;
+}
+
+.add {
+  margin-top: 1%;
+  padding: 10px 20px;
+  color: #001e1d;
+  background-color: #abd1c6;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.add:hover {
+  background-color: #f9bc60;
+}
+
+#myList {
+  list-style-type: none;
+  padding: 0;
+}
+
+.listitems {
+  background-color: #fff;
+  padding: 10px;
+  margin-top: 10px;
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.task {
+  flex-grow: 1;
+  margin-right: 10px;
+}
+
+.completed {
+  margin-right: 10px;
 }
 
 .button-container {
   display: flex;
-  justify-content: space-evenly;
+  align-items: center;
 }
 
 button {
-  align-self: center;
-  background-color: #fff;
-  background-image: none;
-  background-position: 0 90%;
-  background-repeat: repeat no-repeat;
-  background-size: 4px 3px;
-  border-radius: 20px;
-  border-style: solid;
-  border-width: 2px;
-  box-shadow: rgba(0, 0, 0, 0.2) 15px 28px 25px -18px;
-  box-sizing: border-box;
-  color: #41403e;
+  padding: 5px 10px;
+  margin-right: 5px;
+  border: none;
+  border-radius: 3px;
   cursor: pointer;
-  display: inline-block;
-  font-family: Neucha, sans-serif;
-  font-size: 1rem;
-  line-height: 1px;
-  outline: none;
-  padding: 0.75rem;
-  text-decoration: none;
-  transition: all 235ms ease-in-out;
-  border-bottom-left-radius: 15px 255px;
-  border-bottom-right-radius: 225px 15px;
-  border-top-left-radius: 255px 15px;
-  border-top-right-radius: 15px 225px;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-  width: 100%;
-  height: 100%;
-  max-width: 130px;
-  max-height: 45px;
+  transition: background-color 0.3s;
 }
 
 button:hover {
-  box-shadow: rgba(0, 0, 0, 0.3) 2px 8px 8px -5px;
-  transform: translate3d(0, 2px, 0);
-}
-
-button:focus {
-  box-shadow: rgba(0, 0, 0, 0.3) 2px 8px 4px -6px;
+  background-color: #f9bc60;
 }
