--- a/styles.css
+++ b/styles.css
@@ -10,53 +10,55 @@
 .label-wrapper {
   display: flex;
   justify-content: center;
-  font-family: "Lobster", sans-serif;
-  font-weight: 400;
-  font-style: normal;
   font-size: 2rem;
 }
 
 body {
-  background-color: grey;
+  background-color: blanchedalmond;
 }
 
-input {
+/* input {
   display: inline-block;
   width: 40%;
   margin: 5% 0px auto 14%;
   background-color: gainsboro;
-}
+} */
 
-input[type="checkbox"] {
+/* input[type="checkbox"] {
   display: flex;
   align-items: center;
-}
+} */
 
 .task {
-  display: flex;
-  text-decoration: none;
   width: 40%;
   height: 90%;
   margin: 1%;
-  font-family: "Lobster", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-  font-size: 1rem;
 }
 
 ul {
   list-style-type: none;
 }
 
-.button-container {
-  display: flex;
-  justify-content: flex-start;
-  margin: 10px 10%;
+.main {
   background: url(./images/todo.jpg);
   background-size: cover;
+  background-size: initial;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  box-sizing: border-box;
+  width: 60%;
+  margin: 0px auto;
+  min-width: 500px;
+}
+
+.button-container {
+  display: flex;
+  justify-content: space-evenly;
 }
 
 button {
+  align-self: center;
   background-color: #fff;
   background-image: none;
   background-position: 0 90%;
